# task_tracker_cli

./: README.md  pyproject.toml  run.sh
.github/workflows/: ci.yaml
src/: cli.py  config.py  inputs.py  main.py  operations.py  storage.py  task.py  tracker.json
tests/: conftest.py  test_cli.py  test_inputs.py  test_operations.py  test_storage.py  test_task.py
